# hoho

./: .gitignore  .gitmodules  Hoho.csproj  Hoho.sln  PORT.md  Program.cs  README.md  ROADMAP-2.md  ROADMAP.md  ROAMAP.md  art_1.txt  art_2.txt  claude-code-symbols.md  pyproject.toml  test_ascii.py
Core/: AsciiArt.cs  Logger.cs
Decomp/: AutomatedDecompPipeline.cs  CodeFormatter.cs  ConcatScriptGenerator.cs  CrossVersionConsistencyChecker.cs  DIRECTORY_WORKFLOW.md  Decomp.csproj  DecompCommand.cs  DecompilationMapper.cs  DecompilerService.cs  ImprovedSymbolExtractor.cs  JsonContext.cs  LspRenameCommand.cs  LspRenameService.cs  LspServer.cs  LspServerCommands.cs  MappingDisplayCommand.cs  MessagePackMappingDatabase.cs  MigrateMappingsCommand.cs  ModuleExtractor.cs  SimplifiedCommands.cs  SimplifiedExtractor.cs  StructuralRenameDemo.cs  SymbolFrequencyAnalyzer.cs  SymbolRenamingMap.cs  TEST_CASE_EXAMPLE.md  TreeSitterIndexer.cs  VersionManager.cs  WebpackBundleAnalyzer.cs  package.json
Decomp.Tests/: AssemblyInfo.cs  Decomp.Tests.csproj  LspServiceTests.cs  MessagePackMappingDatabaseTests.cs  MessagePackSerializationTests.cs  ModuleExtractionTests.cs  StructuralRenamingTests.cs  SymbolMappingTests.cs
Hoho/: Hoho.csproj  art_2.txt
Hoho.App/: Hoho.csproj  Program.cs
Hoho.App.Old/: Hoho.App.Old.csproj
Hoho.Benchmarks/: BenchmarkRunner.cs  DatabaseOperationBenchmark.cs  Hoho.Benchmarks.csproj  MemoryAllocationBenchmark.cs  Program.cs  README.md
Hoho.Core/: Hoho.Core.csproj
Tools/: BashTools.cs  FileTools.cs  IHohoTool.cs  ToolRegistry.cs
docs/: README.md  (+13 more)
(+112 files in other folders)
