[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hoho"
version = "0.1.0"
description = "High-powered productivity CLI agent forked from Claude Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "typer",
    "rich",
    "python-dotenv",
    "pydantic",
    "click",
    "aiofiles",
]

[project.scripts]
hoho = "hoho.cli:main"
hoho-decompile = "hoho.decompiler:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "ruff",
    "mypy",
]

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true